added tests for controllers, updated postman
