# jvm/http-api/src/main/kotlin/pt/isel/models/event/EventUpdateInput.kt
@@ -1,0 +1,5 @@
+package pt.isel.models.event
+
+data class EventUpdateInput(
+    val newTitle: String,
+)
